--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'mplplayer'
 include ':app'
+include ':react-native-admob'
+project(':react-native-admob').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-admob/android')
 include ':react-native-speech-to-text'
 project(':react-native-speech-to-text').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-speech-to-text/android')
 include ':react-native-vector-icons'
