--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "15.4.2",
     "react-addons-shallow-compare": "15.3.2",
     "react-native": "0.38.0",
+    "react-native-admob": "^1.3.2",
     "react-native-animatable": "1.2.2",
     "react-native-collapsible": "0.8.0",
     "react-native-communications": "2.2.1",
