--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -55,7 +57,7 @@
             </intent-filter>
         </activity>
 
-        <!--reference your fb_app_id-->
+        <!--add ApplicationId-->
         <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/facebook_app_id"/>
