--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
   },
   "dependencies": {
     "crypto-js": "3.1.9-1",
-    "didyoumean2": "1.3.0",
     "immutable": "3.8.1",
-    "isomorphic-fetch": "2.2.1",
     "ramda": "^0.24.1",
     "react": "15.4.2",
     "react-addons-shallow-compare": "15.3.2",
     "react-native": "0.38.0",
     "react-native-admob": "^1.3.2",
     "react-native-animatable": "1.2.2",
-    "react-native-collapsible": "0.8.0",
-    "react-native-communications": "2.2.1",
     "react-native-custom-tabs": "0.1.5",
     "react-native-drawer-layout": "1.3.1",
     "react-native-facebook-login": "1.4.0",
@@ -28,8 +24,6 @@
     "react-native-router-flux": "3.36.0",
     "react-native-send-intent": "1.0.13",
     "react-native-side-menu": "^1.1.3",
-    "react-native-sim": "^0.1.0",
-    "react-native-speech-to-text": "0.0.8",
     "react-native-vector-icons": "2.1.0",
     "react-redux": "4.4.5",
     "redux": "3.6.0",
@@ -39,8 +33,7 @@
     "redux-persist-transform-immutable": "4.1.0",
     "redux-thunk": "2.1.0",
     "remote-redux-devtools": "0.4.9",
-    "rn-spinner": "^0.3.2",
-    "socket.io-client": "1.7.3"
+    "rn-spinner": "^0.3.2"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
