--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "redux-persist": "4.0.0-alpha6",
     "redux-persist-transform-immutable": "4.1.0",
     "redux-thunk": "2.1.0",
-    "remote-redux-devtools": "0.4.9",
-    "rn-spinner": "^0.3.2"
+    "remote-redux-devtools": "0.4.9"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
