--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+	dependencies {
+		// Add this line
+		classpath 'com.google.gms:google-services:3.1.0'
+	}
 }
 
 allprojects {
@@ -22,6 +26,9 @@ allprojects {
         }
         maven {
             url "https://jitpack.io"
+        }
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
         }
     }
 }
