--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "crypto-js": "3.1.9-1",
+    "firebase": "^4.6.0",
     "immutable": "3.8.1",
     "ramda": "^0.24.1",
     "ramda-maybe": "^0.18.0",
     "react": "15.4.2",
     "react-addons-shallow-compare": "15.3.2",
-    "react-native": "0.38.0",
+    "react-native": "0.39.2",
     "react-native-admob": "^1.3.2",
     "react-native-animatable": "1.2.2",
     "react-native-custom-tabs": "0.1.5",
@@ -29,7 +30,7 @@
     "react-redux": "4.4.5",
     "redux": "3.6.0",
     "redux-action-buffer": "1.0.1",
-    "redux-form": "^7.0.3",
+    "redux-form": "^7.1.2",
     "redux-persist": "4.0.0-alpha6",
     "redux-persist-transform-immutable": "4.1.0",
     "redux-thunk": "2.1.0",
