--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "crypto-js": "3.1.9-1",
-    "firebase": "^4.6.0",
+    "firebase": "4.6.0",
     "immutable": "3.8.1",
     "ramda": "^0.24.1",
     "ramda-maybe": "^0.18.0",
     "react": "15.4.2",
     "react-addons-shallow-compare": "15.3.2",
-    "react-native": "0.39.2",
+    "react-native": "0.40.0",
     "react-native-admob": "^1.3.2",
     "react-native-animatable": "1.2.2",
     "react-native-custom-tabs": "0.1.5",
@@ -25,7 +25,7 @@
     "react-native-material-tabs": "2.1.0",
     "react-native-router-flux": "3.36.0",
     "react-native-send-intent": "1.0.13",
-    "react-native-side-menu": "^1.1.3",
+    "react-native-side-menu": "1.1.3",
     "react-native-vector-icons": "2.1.0",
     "react-redux": "4.4.5",
     "redux": "3.6.0",
