--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-animatable": "1.2.2",
     "react-native-custom-tabs": "0.1.5",
     "react-native-drawer-layout": "1.3.1",
-    "react-native-facebook-login": "1.4.0",
+    "react-native-facebook-login": "^1.6.0",
     "react-native-looped-carousel": "^0.1.7",
     "react-native-material-design": "0.3.7",
     "react-native-material-design-styles": "0.2.6",
